Animation flicker fixed

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -294,6 +294,8 @@
   background-repeat: no-repeat;
   background-size: cover;
   padding: 10%;
+  height: 120vh;
+  
 
   h2{
     font-size: 6rem;
@@ -353,6 +355,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  
 
   img{
     margin-top: 2%;
